style.css
html *
{
  font-family: 'Oswald', Helvetica, sans-serif;
}

.coolTitle {
  text-align: left;
  font-size: 40px;
  transform: skewY(-2deg);
  letter-spacing: 4px;
  word-spacing: -8px;
  color: tomato;
  margin-top: 50px;
  margin-bottom: 40px;
  text-shadow:
    -1px -1px 0 firebrick,
    -2px -2px 0 firebrick,
    -3px -3px 0 firebrick,
    -4px -4px 0 firebrick,
    -5px -5px 0 firebrick,
    -6px -6px 0 firebrick,
    -7px -7px 0 firebrick,
    -8px -8px 0 firebrick,
    -30px 20px 40px dimgrey;
}

.done {
  text-decoration: line-through;
}

.bold {
  font-weight: bold;
}

.red {
  color: red;
}

.wrapper {
  display: grid;
  grid-template-columns: 80px 94%;
  margin-top: 10px;
}

.c1 {
  margin-top: 16px;
  margin-right: -10px;
  padding: 2px;
}

.c2 {
  margin-left: -30px;
}

.todolist {
  padding: 3px;
}

.dbutton {
  background-color: red;
  border-radius: 10px;
  width: 65px;
  height: 24px;
}

.dbutton:hover {
  background-color: yellow;
}

.ebutton {
  background-color: blue;
  border-radius: 10px;
  width: 65px;
  color: white;
}

.ebutton:hover {
  background-color: green;
}

